--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         "default_popup": "index.html"
     },
     "icons": {
-        "128": "icon.png"
+        "128": "./Assets/images/icon.png"
     },
     "permission": [
         "tabs",
